# bukhgalter

./: .env  .gitignore  .travis.yml  5.json  Cargo.toml  Dockerfile  Dockerfile.heroku  Makefile  Procfile  README.md  app.json  docker-compose.yml  heroku.yml  iv.yaml  netlify.toml
.circleci/: config.yml
.github/workflows/: build_netlify.yml  create_containter_test.yml  publish_containers.yml  testing.yml
dockerfiles/alpine/: Dockerfile
dockerfiles/debian/: Dockerfile
dockerfiles/testing/debian/: Dockerfile
dockerfiles/testing/slim/: Dockerfile
docs/: CI.md  HU.md  URLS.md  changelog.md  configuracion_distribuida.md  contenerizacion.md  criterios.md  dockerhub.md  env.md  herramientas.md  logs.md  microservicio.md  netlify.md  organizacion.md  paas.md  registroCI.md  serverless.md  setup.md  vercel.md
docs/data/: aggregate.csv  local.csv  server.csv
migrations/2021-01-03-102522_create_accounts/: down.sql  up.sql
serverless/vercel/: Cargo.toml  README.md
serverless/vercel/api/: coll_data.rs  collaborators.rs
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src/db/: db.rs  errors.rs  mod.rs  models.rs
src/filters/: events.rs
src/handlers/: events.rs
src/models/: accounts_sql.rs  errors.rs  mod.rs  models.rs  requests.rs
tests/: test_db_connection.rs  test_events.rs  test_models.rs  test_modes.rs
ui/: README.md  netlify.toml  package-lock.json  package.json  rollup.config.js
ui/bot/: telegram.js
ui/express/: server.js
ui/functions/: bot.js
ui/src/: App.svelte
ui/src/components/: Header.svelte
ui/src/views/: Collaborators.svelte
