[package]
name = "bukhgalter"
version = "0.1.0"
authors = ["Yabir Garcia <yabirg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.56", features = ["preserve_order"]}