[package]
name = "bukhgalter"
version = "0.1.0"
authors = ["Yabir Garcia <yabirg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix = "0.9.0"
dotenv = "0.15.0"
miniserde = "0.1.13"
#mongodb = "1.1.1"
#tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
#futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
thiserror = "1.0"

[dev-dependencies]
#tokio-test = "*"