[package]
name = "bukhgalter"
version = "4.0.1"
authors = ["Yábir García <yabirg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix = "0.9.0"
dotenv = "0.15.0"
#miniserde = "0.1.13"
#mongodb = "1.1.1"
#tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
#futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
thiserror = "1.0"
libmath = "0.2.1"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
serde_derive = "1.0.117"
serde_json = "1.0"
serde = {version="1.0.117",  features = ["derive"]}
async-std = { version = "1.5", features = ["attributes"] }
rand = "0.7.3"
etcd-client = "0.5"
log = "0.4"
pretty_env_logger = "0.4.0"
syslog = "^4.0"
env_logger = "0.8.2"
gelf="0.5.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_as_jsonb = "0.1.2"
#async-trait = "0.1.42"

[dev-dependencies]
#tokio-test = "*"
rstest = "0.6.4"