[package]
name = "bukhgalter-collaborators"
version = "2.0.0"
authors = [ "Yábir García <yabirg@protonmail.com>" ]
edition = "2018"

[dependencies]
http = "0.1"
now_lambda = "0.1.3"
#json = "0.12.4"

[[bin]]
name = "collaborators"
path = "/home/yabirgb/Documents/iv/bukhgalter/serverless/vercel/api/collaborators.rs"

[lib]
name = "utils"
path = "./api/coll_data.rs"